welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:4: error: not found: value avancer
	baisseBrosse(); leveBrosse(); gauche(); avancer(); avancer(); 
                                                ^PictureMono:4: error: not found: value avancer
	baisseBrosse(); leveBrosse(); gauche(); avancer(); avancer(); 
                                                           ^